# nornir_http

./: .gitignore  Makefile  README.md  README.rst  demo.py  demo_basic_auth.py  mypy.ini  pyproject.toml
.github/workflows/: main.yaml
nornir_http/: result.py  tasks.py
tests/: test_nornir_http.py  test_task_http_method.py
