[tool.poetry]
name = "nornir_http"
version = "0.1.1"
description = "http plugins for nornir"
authors = ["ubaumann <github@m.ubaumann.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.18.1"
nornir = "^3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "*"
mypy = "^0.812"
flake8 = "^3.9.2"
pytest-httpx = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
